# signalForge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md
.claude/: settings.local.json
.claude/agents/: chart-debugger-signalForge.md  code-quality-inspector.md  debugger.md  explorer.md  full-stack-feature-signalForge.md  git.md  migration-writer-signalForge.md  pipeline-runner-signalForge.md  prompt-reviewer-signalForge.md  quality-guardian-signalForge.md  researcher.md  test-builder-signalForge.md  type-synchronizer-signalForge.md  ui-ux-reviewer-signalForge.md
.cursor/plans/: annotated_chart_overlay_c1e49ca1.plan.md  cloud_migration_plan_2f3f03d3.plan.md  (+6 more)
docs/: ARCHITECTURE.md  FRONTEND_AGENT_BRIEF.md  PRD.md  appdata-storage-pattern.md
src/backend/: config.py  main.py  pyproject.toml
src/backend/api/: charts.py  pipeline.py  settings.py  strategies.py
src/backend/database/: connection.py
src/backend/database/migrations/: 001_initial.sql  002_add_prompt_mode.sql  002_enable_rls.sql
src/backend/middleware/: __init__.py  auth.py
src/backend/pipeline/: orchestrator.py  schemas.py  validation.py
src/backend/pipeline/prompts/: claude_chart.py  gemini_sentiment.py  gpt_debate.py  perplexity_analysis.py  perplexity_discovery.py
src/backend/pipeline/stages/: claude.py  gemini.py  gpt.py  perplexity.py
src/backend/services/: chart_image.py  keyring_service.py  reflection.py  strategy.py
src/backend/signalforge_backend/: __init__.py
src/backend/utils/: hashing.py
templates/: strategies.json
(+49 files in other folders)
