[project]
name = "signalforge-backend"
version = "0.1.0"
description = "SignalForge AI-powered stock and crypto analysis pipeline"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "platformdirs>=4.0.0",
    "google-genai>=1.0.0",
    "anthropic>=0.49.0",
    "pyjwt>=2.8.0",
    "supabase>=2.0.0",
    "slowapi>=0.1.9",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.4,<0.10.0"]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "B905",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**" = ["S101", "PLR2004", "D"]

[tool.ruff.lint.isort]
known-first-party = ["database", "pipeline", "services", "api", "utils", "middleware", "config"]

[tool.ty.environment]
root = ["."]
python-version = "3.14"

[tool.ty.terminal]
output-format = "full"
error-on-warning = false
